Source/WebKit2/WebProcess/WebPage/DrawingAreaImpl.cpp
@@ -35,7 +35,7 @@
 #include "WebProcess.h"
 #include <WebCore/GraphicsContext.h>
 
-#ifndef __APPLE__
+#if !PLATFORM(MAC)
 #error "This drawing area is not ready for use by other ports yet."
 #endif
 
